tests/errors/compiler/int_op_for_float/warnings/int_op_for_float.c
int main()
{
	float a; 
	int b;

	a = 6.1;
	b = a >> 1;

	return 0;
}
